samples/_failures_safe/1761435811_6b0047_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c3be3b21.c: In function ‘main’:
./samples/SAFE/__tmp_c3be3b21.c:156:17: error: expected declaration or statement at end of input
  156 |                 }
      |                 ^
./samples/SAFE/__tmp_c3be3b21.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c3be3b21.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c3be3b21.c:156:17: error: expected declaration or statement at end of input
